[project]
name = "oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Danilov",email = "danilovn1@mail.ru"}
]
readme = "README.md"
packages = [{include = "src"}]
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
pytest-cov = "^6.2.1"
